--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 
 {% seo %}
   </head>
-<meta name="google-site-verification" content="default.html">
+#<meta name="google-site-verification" content="default.html">
+  <meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
   <body>
 
     <!-- HEADER -->
